feat: Regenerate the newest Compute client (#282)
The new client also excludes several legacy GCE sub-services (like `HttpHealthCheck`, in favor oа `HTTPHealthCheck` (yes the names differ only in letters case)). This is consistent with PHP client and also fixes the build on windows (otherwise the classes with the same name but different case would override each other on the case-insensitive windows file system).

This also fixes the Java 7 build